# Covid-Predictions

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.ini  main.c  smallTest.csv
DataCompresion/libs/: binaryBuffer.h
DataCompresion/src/: CMakeCache.txt  CMakeLists.txt  Makefile  binaryBuffer.c  cmake_install.cmake
libs/: Config.h  CsvProcessing.h  Errors.h  Euler.h  FilesAndDirs.h  Memory.h  Menu.h  PF.h  Ploter.h  fort.h  ini.h
src/: CMakeLists.txt  Config.c  CsvProcessing.c  Euler.c  Files.c  FilesAndDirs.c  Memory.c  Menu.c  PF.c  Ploter.c  fort.c  ini.c  main.c
